@@ -1,3 +1,9 @@
+2011-10-31  Peter Münster  <pmrb@free.fr>  (tiny change)
+
+	* gnus-group.el (gnus-group-get-new-news): New parameter `one-level'
+	for scanning exactly one level.
+	* gnus-start.el (gnus-get-unread-articles): Ditto.
+
 2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-sum.el (gnus-articles-to-read): Change wording in prompt to be
